# job-hopper

./: .gitignore  README.md  pyproject.toml
deploy/langgraph/: .dockerignore  Dockerfile  pyproject.toml
infra/terraform/langgraph-cloud-run/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
requirements/: create-agent.txt
spec/: business_req.md  technical_requirement.md
src/apps/crewai/: api.py  crew.py  main.py
src/apps/crewai/config/: agents.yaml  tasks.yaml
src/apps/langgraph/: api.py  main.py  workflow.py
src/resume_generator/: api.py  crew.py  main.py
src/resume_generator/config/: agents.yaml  tasks.yaml
