[project]
name = "resume_generator"
version = "0.1.0"
description = "resume-generator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0"
]

[project.scripts]
resume_generator = "resume_generator.main:run"
run_crew = "resume_generator.main:run"
train = "resume_generator.main:train"
replay = "resume_generator.main:replay"
test = "resume_generator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
