[project]
name = "resume_generator"
version = "0.1.0"
description = "resume-generator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.30.0,<1.0.0",
    "langgraph>=0.2.0,<1.0.0",
    "langchain-openai>=0.2.0,<1.0.0"
]

[project.scripts]
resume_generator = "apps.crewai.main:run"
run_crew = "apps.crewai.main:run"
run_langgraph = "apps.langgraph.main:run"
run_create_agent = "apps.langgraph.main:run"
train = "apps.crewai.main:train"
replay = "apps.crewai.main:replay"
test = "apps.crewai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apps"]
include = [
    "src/apps/crewai/config/**",
]

[tool.crewai]
type = "crew"
