[project]
name = "resume-langgraph-api"
version = "0.1.0"
description = "LangGraph API service for resume generator"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
  "langgraph>=1.0.0,<2.0.0",
  "langchain-google-genai>=2.1.9,<3.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "dotenv>=0.9.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apps"]
include = ["src/apps/langgraph/**"]
